--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -49,4 +49,13 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-name>ServletAddUser</servlet-name>
 		<url-pattern>/adduser</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>ServletUser</servlet-name>
+		<servlet-class>com.example.myproject.servlet.UsersServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ServletUser</servlet-name>
+		<url-pattern>/user</url-pattern>
+	</servlet-mapping>
 </web-app>
