--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -86,4 +86,13 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-name>ServletApiMe</servlet-name>
 		<url-pattern>/api/v1/me</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>ServletUserDelete</servlet-name>
+		<servlet-class>com.example.myproject.apiservices.UsersServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ServletUserDelete</servlet-name>
+		<url-pattern>/user/*</url-pattern>
+	</servlet-mapping>
 </web-app>
