adding Jokes in Post and retrieving Jokes in Get method

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -86,5 +86,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-name>ServletApiMe</servlet-name>
 		<url-pattern>/api/v1/me</url-pattern>
 	</servlet-mapping>
+	
+		<servlet>
+		<servlet-name>ServletApiServiceForJoke</servlet-name>
+		<servlet-class>com.example.myproject.apiservices.ApiServiceForJokeServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ServletApiServiceForJoke</servlet-name>
+		<url-pattern>/api/v1/joke</url-pattern>
+	</servlet-mapping>	
 
 </web-app>
